# levenshtein-distance-benchmark

./: .gitignore  pyproject.toml
src/: LevenshteinDistance.ipynb
src/data/: medinform_similarity_wordpairs.csv
