[tool.poetry]
name = "code"
version = "0.1.0"
description = ""
authors = ["Nayyara Airlangga <nayyara.airlangga@gmail.com>"]
readme = "README.md"
packages = [{include = "code", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.2"
pandas = "^2.1.3"
matplotlib = "^3.8.2"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
